# rustii

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/archive/: ash.rs  lz77.rs  mod.rs  u8.rs
src/nand/: emunand.rs  mod.rs  setting.rs  sys.rs
src/title/: cert.rs  commonkeys.rs  content.rs  crypto.rs  mod.rs  nus.rs  ticket.rs  tmd.rs  versions.rs  wad.rs
src/title/keys/: dev-pub.pem  retail-pub.pem
