[package]
name = "rustii"
authors = ["NinjaCheetah <ninjacheetah@ncxprogramming.com>"]
license = "MIT"
description = "A Rust library and CLI for handling files and formats used by the Wii"
version = "0.1.0"
readme = "README.md"
homepage = "https://github.com/NinjaCheetah/rustii"
repository = "https://github.com/NinjaCheetah/rustii"
edition = "2024"
default-run = "rustii"

[[bin]]
name = "rustii"
path = "src/bin/rustii/main.rs"

[[bin]]
name = "playground"
path = "src/bin/playground/main.rs"

[lib]
path = "src/lib.rs"
test = true
doc = true

[dependencies]
byteorder = "1"
cbc = "0"
aes = "0"
rsa = { version = "0", features = ["sha2"] }
hex = "0"
sha1 = { version = "0", features = ["oid"]}
glob = "0"
regex = "1"
clap = { version = "4", features = ["derive"] }
